--- a/pybo/templates/base.html
+++ b/pybo/templates/base.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.min.css') }}">
     <!-- pybo CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <title>Hello, pybo!</title>
+    <title>Question & Answer</title>
 </head>
 <body>
 <!-- 네비게이션바 -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{{ url_for('main.index') }}">KUInfo</a>
+        <a class="navbar-brand" background-color="#862633" href="{{ url_for('main.index') }}">KUInfo</a>
         <button class="navbar-toggler" type="button"
                 data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent"
